desenv_tests/test-assets/field/failure/rename_wrong_usage_2.stderr
error: `rename` modifier cannot be used as list. Usage: `#[desenv(rename = "value")]`
 --> test-assets/field/failure/rename_wrong_usage_2.rs:5:14
  |
5 |     #[desenv(rename(value = ""))]
  |              ^^^^^^
