desenv_tests/test-assets/field/failure/rename_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(rename(value = ""))]
    field: String
}

fn main(){}